Pull request #742: AG-50737: User rules scroll hover fix
Merge in SCITER/adguard-mini from AG-50737-user-rules-scroll-hover to master

Squashed commit of the following:

commit 8710cd18fdf238a28a29134e4018b1848ce25cd0
Merge: 42acfe31 a316e67d
Author: Vladislav Abdulmyanov <v.abdulmyanov@adguard.com>
Date:   Mon Feb 16 11:26:24 2026 +0300

    Merge branch 'master' into AG-50737-user-rules-scroll-hover

commit 42acfe3171105d66389aa771d219d9f32fc6ca5b
Author: Vladislav Abdulmyanov <v.abdulmyanov@adguard.com>
Date:   Mon Feb 16 11:26:16 2026 +0300

    AG-50737: User rules scroll hover fix

--- a/AdguardMini/sciter-ui/modules/settings/components/UserRules/UserRules.module.pcss
+++ b/AdguardMini/sciter-ui/modules/settings/components/UserRules/UserRules.module.pcss
@@ -74,6 +74,7 @@
     &_scrollableContainer {
         overflow-y: auto;
         scroll-manner: scroll-manner(wheel-animation: false, step: 50%);
+        padding-right: var(--m-xxs);
         height: *;
         width: *;
     }
